[package]
name = "aprs"
version = "0.3.1"
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]
description = "Automatic Position Reporting System (APRS) protocol definitions"
documentation = "https://docs.rs/aprs/"
repository = "https://github.com/azov/aprs-rs"
license = "Apache-2.0"
edition = "2024"

[dev-dependencies]
approx = "0.5.1"
